--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,11 @@ services:
       # If you prefer to control this via an env file, remove this line and set CORS_ORIGINS there.
       CORS_ORIGINS: "http://localhost:5173,http://127.0.0.1:5173,http://localhost:5174,http://localhost:1337"
       NODE_ENV: development
+      PORT: 1337
+    # Run Strapi in development mode so it watches source changes
+    command: npm run develop
     ports:
-      - "1337:1338"
+      - "1337:1337"
     depends_on:
       - postgres
     networks:
