--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
+		"framer-motion": "^12.23.25",
 		"i18n-iso-countries": "^7.14.0",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.534.0",
@@ -56,22 +57,22 @@
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
 		"@types/react-image-gallery": "^1.2.4",
+		"@types/react-router-dom": "^5.3.3",
 		"@types/react-world-flags": "^1.6.0",
 		"@vitejs/plugin-react": "^5.0.4",
+		"autoprefixer": "^10.4.21",
 		"eslint": "^9.36.0",
 		"eslint-import-resolver-typescript": "^4.4.4",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.22",
-		"globals": "^16.4.0",
-		"typescript": "~5.9.3",
-		"typescript-eslint": "^8.45.0",
-		"@types/react-router-dom": "^5.3.3",
-		"autoprefixer": "^10.4.21",
 		"eslint-plugin-unused-imports": "^4.1.4",
+		"globals": "^16.4.0",
 		"postcss": "^8.5.6",
 		"strapi-to-typescript": "^2.0.15",
 		"tailwindcss": "^4.1.11",
 		"tw-animate-css": "^1.3.6",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.45.0",
 		"vite": "^7.1.7"
 	}
 }
