--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
 		"react-select": "^5.10.2",
 		"react-slugify": "^5.0.0",
 		"react-world-flags": "^1.6.0",
+		"react-window": "^1.8.7",
 		"tailwind-merge": "^3.3.1",
 		"tw-animate-css": "^1.4.0",
 		"zod": "^4.1.12"
@@ -71,6 +72,7 @@
 		"strapi-to-typescript": "^2.0.15",
 		"tailwindcss": "^4.1.11",
 		"tw-animate-css": "^1.3.6",
+		"@types/react-window": "^1.8.7",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.45.0",
 		"vite": "^7.1.7"
