--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,23 @@
 # Development stage
 FROM node:20-alpine AS development
+
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
-COPY . .
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
 EXPOSE 5173
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["npm", "run", "dev"]
 
 # Build stage
 FROM node:20-alpine AS build
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci
+# Install build deps as root to avoid permission issues during install
+RUN npm ci --no-audit --progress=false --unsafe-perm=true
 COPY . .
 ARG VITE_API_ROOT
 ENV VITE_API_ROOT=$VITE_API_ROOT
