--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,7 @@
     "moduleResolution": "Node",
     "lib": ["ES2020"],
     "target": "ES2019",
-    "types": ["node", "jest"],
+    "types": ["node"],
     "strict": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -41,6 +41,9 @@
     // Do not include admin files in the server compilation
     "src/admin/",
     // Do not include plugins in the server compilation
-    "src/plugins/**"
+    "src/plugins/**",
+    "src/**/*.spec.*",
+    "src/**/__tests__/**",
+    "src/**/*.test.*"
   ]
 }
