--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       # Provide a sensible default for development so CORS isn't set to an empty string
       # If you prefer to control this via an env file, remove this line and set CORS_ORIGINS there.
-      CORS_ORIGINS: "http://localhost:5173,http://127.0.0.1:5173,http://localhost:5174,http://localhost:1337"
+      CORS_ORIGINS: "http://localhost:5173,http://127.0.0.1:5173,http://localhost:5174,http://localhost:1337,http://backend:1337"
       NODE_ENV: development
       PORT: 1337
     # Run Strapi in development mode so it watches source changes
