--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -28,5 +28,5 @@
 		"noUncheckedSideEffectImports": true
 	},
 	"include": ["src"],
-	"exclude": ["src/**/*.spec.*", "src/**/__tests__/**"]
+	"exclude": ["src/**/*.spec.*", "src/**/__tests__/**", "src/**/*.test.*", "src/test/**"]
 }
