fixed staging setup

--- a/.env.staging
+++ b/.env.staging
@@ -25,4 +25,4 @@ POSTGRES_PASSWORD=strapi_password_change_me
 POSTGRES_DB=strapi
 
 # Frontend
-VITE_API_ROOT=http://localhost:8080/api
+VITE_API_ROOT=http://localhost/api
