--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,5 +1,7 @@
 version: "3.8"
 
+name: zadar-museum-staging
+
 services:
   postgres:
     image: postgres:15.4-alpine
@@ -20,9 +22,7 @@ services:
       retries: 5
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: ghcr.io/litovicmateo/zadar-museum-backend:latest
     container_name: strapi_staging
     volumes:
       - strapi_uploads:/app/public/uploads
@@ -62,13 +62,12 @@ services:
           memory: 512M
 
   frontend:
+    image: ghcr.io/litovicmateo/zadar-museum-frontend:latest
+    container_name: react_staging
     build:
       context: ./frontend
-      dockerfile: Dockerfile
-      target: production
       args:
-        VITE_API_ROOT: /api
-    container_name: react_staging
+        VITE_API_ROOT: ${VITE_API_ROOT}
     depends_on:
       - backend
     networks:
