--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,7 @@
     "moduleResolution": "Node",
     "lib": ["ES2020"],
     "target": "ES2019",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "strict": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
