--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,16 +24,18 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-      target: runtime
+      target: development
     image: zadar-museum-backend:dev
     environment:
+      NODE_ENV: development
+      HOST: 0.0.0.0
+      PORT: 1337
+      CHOKIDAR_USEPOLLING: 'true'
       DATABASE_HOST: postgres
       DATABASE_PORT: ${DATABASE_PORT:-5432}
       DATABASE_NAME: ${DATABASE_NAME:-${POSTGRES_DB}}
       DATABASE_USERNAME: ${DATABASE_USERNAME:-${POSTGRES_USER}}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD:-${POSTGRES_PASSWORD}}
-      NODE_ENV: production
-      PORT: 1337
       # Strapi secrets (supply via .env.dev passed with --env-file)
       ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
       API_TOKEN_SALT: ${API_TOKEN_SALT}
@@ -41,8 +43,12 @@ services:
       ENCRYPTION_KEY: ${ENCRYPTION_KEY}
       JWT_SECRET: ${JWT_SECRET}
       APP_KEYS: ${APP_KEYS}
+    command: npm run develop
     volumes:
+      - ./backend:/app:cached
+      - backend_node_modules:/app/node_modules
       - strapi_uploads:/app/public/uploads
+      - ./sql:/sql:ro
     ports:
       - "1337:1337"
     depends_on:
@@ -83,3 +89,4 @@ volumes:
   postgres_dev_data:
   strapi_uploads:
   frontend_node_modules:
+  backend_node_modules:
